feat: 增加部分加密工具

--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -10,6 +10,7 @@
     "minify": "संक्षिप्त करें",
     "convert": "परिवर्तित करें",
     "download": "डाउनलोड करें",
+    "generate": "जेनरेट करें",
     "input": "इनपुट",
     "output": "आउटपुट",
     "upload_file": "फ़ाइल अपलोड करें",
@@ -326,6 +327,288 @@
         "title": "URL एन्कोडर/डीकोडर टूल",
         "description": "ऑनलाइन URL एन्कोडिंग और डीकोडिंग टूल। फ्रंटएंड विकास के लिए encodeURIComponent फॉर्मेट समर्थन के साथ URL पैरामीटर और विशेष कैरेक्टर एस्केपिंग को संभालें।",
         "keywords": "URL एन्कोडिंग,URL डीकोडिंग,encodeURIComponent,decodeURIComponent,URL एस्केपिंग,ऑनलाइन टूल"
+      }
+    },
+    "password-generator": {
+      "name": "पासवर्ड जेनरेटर",
+      "description": "सुरक्षित और विश्वसनीय रैंडम पासवर्ड जेनरेट करें",
+      "settings_title": "पासवर्ड सेटिंग्स",
+      "settings_desc": "पासवर्ड जेनरेशन नियमों को कस्टमाइज़ करें",
+      "length": "पासवर्ड लंबाई",
+      "uppercase": "बड़े अक्षर शामिल करें",
+      "lowercase": "छोटे अक्षर शामिल करें",
+      "numbers": "संख्याएं शामिल करें",
+      "symbols": "प्रतीक शामिल करें",
+      "exclude_similar": "समान वर्ण बाहर करें (il1Lo0O)",
+      "exclude_ambiguous": "अस्पष्ट वर्ण बाहर करें (ब्रैकेट, कोष्ठक आदि)",
+      "generate": "पासवर्ड जेनरेट करें",
+      "result_title": "जेनरेटेड परिणाम",
+      "result_desc": "जेनरेटेड पासवर्ड और मजबूती मूल्यांकन",
+      "result_placeholder": "जेनरेटेड पासवर्ड यहाँ दिखाई देगा...",
+      "strength": "पासवर्ड मजबूती",
+      "weak": "कमजोर",
+      "medium": "मध्यम",
+      "strong": "मजबूत",
+      "no_charset": "कृपया कम से कम एक वर्ण प्रकार चुनें",
+      "tips_title": "उपयोग सुझाव",
+      "tip1_title": "पासवर्ड लंबाई",
+      "tip1_desc": "12+ वर्णों वाले पासवर्ड का उपयोग करने की सिफारिश की जाती है, लंबा अधिक सुरक्षित है",
+      "tip2_title": "वर्ण संयोजन",
+      "tip2_desc": "बड़े अक्षर, छोटे अक्षर, संख्या और प्रतीक शामिल करने की सिफारिश की जाती है",
+      "tip3_title": "नियमित अपडेट",
+      "tip3_desc": "नियमित रूप से पासवर्ड बदलें, कई खातों के लिए समान पासवर्ड का उपयोग न करें",
+      "tip4_title": "सुरक्षित स्टोरेज",
+      "tip4_desc": "पासवर्ड को सुरक्षित रूप से स्टोर करने के लिए पासवर्ड मैनेजर का उपयोग करें, सादा टेक्स्ट रिकॉर्डिंग से बचें",
+      "meta": {
+        "title": "पासवर्ड जेनरेटर",
+        "description": "ऑनलाइन सुरक्षित पासवर्ड जेनरेटर। खाता सुरक्षा के लिए उच्च-शक्ति रैंडम पासवर्ड जेनरेट करने के लिए कस्टम लंबाई और वर्ण सेट का समर्थन करता है।",
+        "keywords": "पासवर्ड जेनरेटर,रैंडम पासवर्ड,सुरक्षित पासवर्ड,पासवर्ड मजबूती,खाता सुरक्षा,ऑनलाइन टूल"
+      }
+    },
+    "aes-encrypt-decrypt": {
+      "name": "AES एन्क्रिप्ट/डिक्रिप्ट",
+      "description": "AES सिमेट्रिक एन्क्रिप्शन एल्गोरिथम टूल",
+      "input_title": "इनपुट डेटा",
+      "input_desc": "एन्क्रिप्ट/डिक्रिप्ट करने के लिए डेटा दर्ज करें",
+      "input_placeholder": "एन्क्रिप्ट या डिक्रिप्ट करने के लिए टेक्स्ट दर्ज करें...",
+      "key_label": "की (32 वर्ण)",
+      "key_placeholder": "32-वर्ण की दर्ज करें या जेनरेट करें...",
+      "generate_key": "की जेनरेट करें",
+      "iv_label": "इनिशियलाइज़ेशन वेक्टर (16 वर्ण)",
+      "iv_placeholder": "16-वर्ण IV दर्ज करें या जेनरेट करें...",
+      "generate_iv": "IV जेनरेट करें",
+      "mode_label": "एन्क्रिप्शन मोड",
+      "select_mode": "एन्क्रिप्शन मोड चुनें",
+      "encrypt": "एन्क्रिप्ट",
+      "decrypt": "डिक्रिप्ट",
+      "output_title": "आउटपुट परिणाम",
+      "output_desc": "एन्क्रिप्टेड/डिक्रिप्टेड डेटा",
+      "output_placeholder": "एन्क्रिप्शन/डिक्रिप्शन परिणाम यहाँ दिखाई देगा...",
+      "missing_input_key": "कृपया डेटा और की दर्ज करें",
+      "missing_input_key_iv": "कृपया डेटा, की और IV दर्ज करें",
+      "decrypt_failed": "डिक्रिप्शन असफल, डेटा और की की जांच करें",
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "AES एल्गोरिथम",
+      "tip1_desc": "AES (एडवांसड एन्क्रिप्शन स्टैंडर्ड) सबसे सुरक्षित सिमेट्रिक एन्क्रिप्शन एल्गोरिथम में से एक है",
+      "tip2_title": "की सुरक्षा",
+      "tip2_desc": "की की लंबाई 32 वर्ण (256 बिट) है, कृपया की को सुरक्षित रखें",
+      "tip3_title": "इनिशियलाइज़ेशन वेक्टर",
+      "tip3_desc": "IV एन्क्रिप्शन की रैंडमनेस बढ़ाता है, हर एन्क्रिप्शन के लिए अलग IV का उपयोग करें",
+      "tip4_title": "डेटा सुरक्षा",
+      "tip4_desc": "सभी एन्क्रिप्शन/डिक्रिप्शन स्थानीय रूप से किया जाता है, डेटा सर्वर पर अपलोड नहीं होता",
+      "meta": {
+        "title": "AES एन्क्रिप्ट/डिक्रिप्ट टूल",
+        "description": "ऑनलाइन AES एन्क्रिप्शन/डिक्रिप्शन टूल। सुरक्षित डेटा एन्क्रिप्शन और डिक्रिप्शन के लिए AES-256-CBC मोड का समर्थन करता है।",
+        "keywords": "AES एन्क्रिप्शन,AES डिक्रिप्शन,सिमेट्रिक एन्क्रिप्शन,डेटा एन्क्रिप्शन,सूचना सुरक्षा,ऑनलाइन टूल"
+      }
+    },
+    "jwt-decoder": {
+      "name": "JWT डिकोडर",
+      "description": "JWT टोकन डिकोडिंग और सत्यापन टूल",
+      "input_title": "JWT टोकन इनपुट",
+      "input_desc": "डिकोड करने के लिए JWT टोकन दर्ज करें",
+      "input_placeholder": "JWT टोकन दर्ज करें...",
+      "output_title": "डिकोडेड परिणाम",
+      "output_desc": "JWT टोकन की विस्तृत जानकारी",
+      "header": "हेडर",
+      "payload": "पेलोड",
+      "signature": "हस्ताक्षर",
+      "issuer": "जारीकर्ता (iss)",
+      "subject": "विषय (sub)",
+      "audience": "ऑडियंस (aud)",
+      "issued_at": "जारी किया गया (iat)",
+      "expires_at": "समाप्ति समय (exp)",
+      "expired": "समाप्त हो गया",
+      "valid_jwt": "वैध JWT टोकन",
+      "invalid_format": "अमान्य JWT फॉर्मेट, तीन भाग होने चाहिए",
+      "decode_failed": "डिकोडिंग असफल, JWT टोकन फॉर्मेट की जांच करें",
+      "no_output": "कृपया डिकोडिंग के लिए JWT टोकन दर्ज करें",
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "JWT संरचना",
+      "tip1_desc": "JWT हेडर, पेलोड, हस्ताक्षर से मिलकर बना होता है, डॉट से अलग किया जाता है",
+      "tip2_title": "Base64URL एन्कोडिंग",
+      "tip2_desc": "हेडर और पेलोड Base64URL एन्कोडिंग का उपयोग करते हैं, सीधे डिकोड किया जा सकता है",
+      "tip3_title": "हस्ताक्षर सत्यापन",
+      "tip3_desc": "यह टूल केवल सामग्री डिकोड करता है, हस्ताक्षर वैधता की पुष्टि नहीं करता",
+      "tip4_title": "समाप्ति जांच",
+      "tip4_desc": "स्वचालित रूप से exp फील्ड की जांच करके निर्धारित करता है कि टोकन समाप्त हो गया है या नहीं",
+      "meta": {
+        "title": "JWT डिकोडर",
+        "description": "ऑनलाइन JWT टोकन डिकोडिंग टूल। JWT हेडर और पेलोड को डिकोड करें, विस्तृत जानकारी और समाप्ति स्थिति प्रदर्शित करें।",
+        "keywords": "JWT डिकोडर,JWT टोकन,प्रमाणीकरण,टोकन पार्सिंग,JSON वेब टोकन,ऑनलाइन टूल"
+      }
+    },
+    "rsa-encrypt-decrypt": {
+      "name": "RSA एन्क्रिप्ट/डिक्रिप्ट",
+      "description": "RSA असिमेट्रिक एन्क्रिप्शन एल्गोरिथम टूल",
+      "encrypt_tab": "एन्क्रिप्ट/डिक्रिप्ट",
+      "keygen_tab": "की जेनरेशन",
+      "input_title": "इनपुट डेटा",
+      "input_desc": "एन्क्रिप्ट/डिक्रिप्ट करने के लिए डेटा दर्ज करें",
+      "input_placeholder": "एन्क्रिप्ट या डिक्रिप्ट करने के लिए टेक्स्ट दर्ज करें...",
+      "public_key": "पब्लिक की",
+      "public_key_label": "पब्लिक की (एन्क्रिप्शन के लिए)",
+      "public_key_placeholder": "RSA पब्लिक की दर्ज करें या जेनरेट करें...",
+      "private_key": "प्राइवेट की",
+      "private_key_label": "प्राइवेट की (डिक्रिप्शन के लिए)",
+      "private_key_placeholder": "RSA प्राइवेट की दर्ज करें या जेनरेट करें...",
+      "encrypt": "RSA एन्क्रिप्ट",
+      "decrypt": "RSA डिक्रिप्ट",
+      "output_title": "आउटपुट परिणाम",
+      "output_desc": "एन्क्रिप्टेड/डिक्रिप्टेड डेटा",
+      "output_placeholder": "एन्क्रिप्शन/डिक्रिप्शन परिणाम यहाँ दिखाई देगा...",
+      "keygen_title": "की पेयर जेनरेशन",
+      "keygen_desc": "RSA पब्लिक/प्राइवेट की पेयर जेनरेट करें",
+      "generate_keys": "कीज़ जेनरेट करें",
+      "key_size_label": "की साइज़",
+      "select_key_size": "की साइज़ चुनें",
+      "generate_keypair": "की पेयर जेनरेट करें",
+      "generating": "जेनरेट कर रहे हैं...",
+      "generated_public_key": "जेनरेटेड पब्लिक की",
+      "generated_private_key": "जेनरेटेड प्राइवेट की",
+      "missing_input_key": "कृपया डेटा और पब्लिक की दर्ज करें",
+      "missing_input_public_key": "कृपया डेटा और पब्लिक की दर्ज करें",
+      "missing_input_private_key": "कृपया डेटा और प्राइवेट की दर्ज करें",
+      "encrypt_failed": "एन्क्रिप्शन असफल, डेटा और पब्लिक की की जांच करें",
+      "decrypt_failed": "डिक्रिप्शन असफल, डेटा और प्राइवेट की की जांच करें",
+      "placeholder": "एन्क्रिप्ट या डिक्रिप्ट करने के लिए टेक्स्ट दर्ज करें...",
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "RSA एल्गोरिथम",
+      "tip1_desc": "RSA एक सुरक्षित असिमेट्रिक एन्क्रिप्शन एल्गोरिथम है, पब्लिक की से एन्क्रिप्ट करें, प्राइवेट की से डिक्रिप्ट करें",
+      "tip2_title": "की साइज़",
+      "tip2_desc": "बेहतर सुरक्षा के लिए 2048-बिट या उच्चतर की साइज़ का उपयोग करने की सिफारिश की जाती है",
+      "tip3_title": "डेटा सीमा",
+      "tip3_desc": "RSA एन्क्रिप्शन में डेटा साइज़ सीमा है, बड़े डेटा के लिए AES+RSA संयोजन पर विचार करें",
+      "tip4_title": "की प्रबंधन",
+      "tip4_desc": "प्राइवेट की को सख्ती से गोपनीय रखा जाना चाहिए, पब्लिक की को खुले तौर पर साझा किया जा सकता है",
+      "meta": {
+        "title": "RSA एन्क्रिप्ट/डिक्रिप्ट टूल",
+        "description": "ऑनलाइन RSA एन्क्रिप्शन/डिक्रिप्शन टूल। सुरक्षित डेटा ट्रांसमिशन के लिए की पेयर जेनरेशन, पब्लिक की एन्क्रिप्शन और प्राइवेट की डिक्रिप्शन का समर्थन करता है।",
+        "keywords": "RSA एन्क्रिप्शन,RSA डिक्रिप्शन,असिमेट्रिक एन्क्रिप्शन,पब्लिक की एन्क्रिप्शन,प्राइवेट की डिक्रिप्शन,डिजिटल हस्ताक्षर,ऑनलाइन टूल"
+      }
+    },
+    "md5-hash": {
+      "name": "MD5 हैश जरनरेटर",
+      "description": "टेक्स्ट से MD5 हैश वैल्यू जेनरेट करें",
+      "placeholder": "MD5 हैश कैलकुलेट करने के लिए टेक्स्ट दर्ज करें...",
+      "generate": "MD5 जेनरेट करें",
+      "input_title": "इनपुट टेक्स्ट",
+      "output_title": "MD5 हैश",
+      "output_desc": "जेनरेटेड MD5 हैश वैल्यू",
+      "output_placeholder": "MD5 हैश यहाँ दिखाई देगा...",
+      "meta": {
+        "title": "MD5 हैश जरनरेटर",
+        "description": "ऑनलाइन MD5 हैश जेनरेशन टूल। टेक्स्ट से MD5 हैश वैल्यू तुरंत कैलकुलेट करें, डेटा वेरिफिकेशन और यूनीक आइडेंटिफिकेशन के लिए उपयुक्त।",
+        "keywords": "MD5 हैश,हैश जेनरेटर,डेटा वेरिफिकेशन,MD5 कैलकुलेशन,ऑनलाइन टूल"
+      }
+    },
+    "sha256-hash": {
+      "name": "SHA256 हैश जरनरेटर",
+      "description": "टेक्स्ट से SHA256 हैश वैल्यू जेनरेट करें",
+      "placeholder": "SHA256 हैश कैलकुलेट करने के लिए टेक्स्ट दर्ज करें...",
+      "generate": "SHA256 जेनरेट करें",
+      "input_title": "इनपुट टेक्स्ट",
+      "output_title": "SHA256 हैश",
+      "output_desc": "जेनरेटेड SHA256 हैश वैल्यू",
+      "output_placeholder": "SHA256 हैश यहाँ दिखाई देगा...",
+      "meta": {
+        "title": "SHA256 हैश जरनरेटर",
+        "description": "ऑनलाइन SHA256 हैश जेनरेशन टूल। सुरक्षित SHA256 हैश वैल्यू जेनरेट करें, पासवर्ड स्टोरेज और डेटा अखंडता वेरिफिकेशन के लिए व्यापक रूप से उपयोग किया जाता है।",
+        "keywords": "SHA256 हैश,हैश जेनरेटर,पासवर्ड सिक्योरिटी,डेटा अखंडता,SHA256 कैलकुलेशन,ऑनलाइन टूल"
+      }
+    },
+    "sha1-hash": {
+      "name": "SHA1 हैश जरनरेटर",
+      "description": "टेक्स्ट से SHA1 हैश वैल्यू जेनरेट करें",
+      "placeholder": "SHA1 हैश कैलकुलेट करने के लिए टेक्स्ट दर्ज करें...",
+      "generate": "SHA1 जेनरेट करें",
+      "input_title": "इनपुट टेक्स्ट",
+      "output_title": "SHA1 हैश",
+      "output_desc": "जेनरेटेड SHA1 हैश वैल्यू",
+      "output_placeholder": "SHA1 हैश यहाँ दिखाई देगा...",
+      "meta": {
+        "title": "SHA1 हैश जरनरेटर",
+        "description": "ऑनलाइन SHA1 हैश जेनरेशन टूल। टेक्स्ट से SHA1 हैश वैल्यू कैलकुलेट करें, डेटा वेरिफिकेशन और वर्जन कंट्रोल सिस्टम के लिए उपयोग किया जाता है।",
+        "keywords": "SHA1 हैश,हैश जेनरेटर,डेटा वेरिफिकेशन,SHA1 कैलकुलेशन,वर्जन कंट्रोल,ऑनलाइन टूल"
+      }
+    },
+    "hex-encoder-decoder": {
+      "name": "Hex एनकोडर/डीकोडर",
+      "description": "हेक्साडेसिमल स्ट्रिंग एनकोडिंग और डीकोडिंग टूल",
+      "placeholder": "एनकोड/डीकोड करने के लिए टेक्स्ट या हेक्साडेसिमल दर्ज करें...",
+      "encode": "Hex में एनकोड करें",
+      "decode": "Hex से डीकोड करें",
+      "input_title": "इनपुट टेक्स्ट",
+      "output_title": "आउटपुट परिणाम",
+      "output_desc": "एनकोडेड/डीकोडेड परिणाम",
+      "output_placeholder": "एनकोडिंग/डीकोडिंग परिणाम यहाँ दिखाई देगा...",
+      "invalid_hex": "अमान्य हेक्साडेसिमल फॉरमेट",
+      "encoded": "सफलतापूर्वक एनकोड किया गया",
+      "decoded": "सफलतापूर्वक डीकोड किया गया",
+      "meta": {
+        "title": "Hex एनकोडर/डीकोडर टूल",
+        "description": "ऑनलाइन हेक्साडेसिमल एनकोडिंग और डीकोडिंग टूल। डेटा प्रोसेसिंग और डिबगिंग के लिए टेक्स्ट को हेक्साडेसिमल स्ट्रिंग में/से कनवर्ट करें।",
+        "keywords": "Hex एनकोडिंग,हेक्साडेसिमल डीकोडिंग,एनकोडर,डीकोडर,डेटा कनवर्शन,ऑनलाइन टूल"
+      }
+    },
+    "binary-encoder-decoder": {
+      "name": "Binary एनकोडर/डीकोडर",
+      "description": "बाइनरी स्ट्रिंग एनकोडिंग और डीकोडिंग टूल",
+      "placeholder": "एनकोड/डीकोड करने के लिए टेक्स्ट या बाइनरी दर्ज करें...",
+      "encode": "Binary में एनकोड करें",
+      "decode": "Binary से डीकोड करें",
+      "input_title": "इनपुट टेक्स्ट",
+      "output_title": "आउटपुट परिणाम",
+      "output_desc": "एनकोडेड/डीकोडेड परिणाम",
+      "output_placeholder": "एनकोडिंग/डीकोडिंग परिणाम यहाँ दिखाई देगा...",
+      "invalid_binary": "अमान्य बाइनरी फॉरमेट",
+      "encoded": "सफलतापूर्वक एनकोड किया गया",
+      "decoded": "सफलतापूर्वक डीकोड किया गया",
+      "meta": {
+        "title": "Binary एनकोडर/डीकोडर टूल",
+        "description": "ऑनलाइन बाइनरी एनकोडिंग और डीकोडिंग टूल। लो-लेवल डेटा विश्लेषण और सीखने के लिए टेक्स्ट को बाइनरी स्ट्रिंग में/से कनवर्ट करें।",
+        "keywords": "Binary एनकोडिंग,बाइनरी डीकोडिंग,एनकोडर,डीकोडर,बाइनरी कनवर्शन,ऑनलाइन टूल"
+      }
+    },
+    "hmac-generator": {
+      "name": "HMAC जेनरेटर",
+      "description": "HMAC संदेश प्रमाणीकरण कोड जेनरेशन टूल",
+      "input_title": "इनपुट कॉन्फ़िगरेशन",
+      "input_desc": "HMAC जेनरेशन पैरामीटर कॉन्फ़िगर करें",
+      "data_label": "संदेश डेटा",
+      "data_placeholder": "HMAC जेनरेट करने के लिए संदेश डेटा दर्ज करें...",
+      "key_label": "सीक्रेट की",
+      "key_placeholder": "HMAC सीक्रेट की दर्ज करें...",
+      "generate_key": "रैंडम की जेनरेट करें",
+      "algorithm_label": "एल्गोरिथम",
+      "select_algorithm": "HMAC एल्गोरिथम चुनें",
+      "format_label": "आउटपुट फॉर्मेट",
+      "select_format": "आउटपुट फॉर्मेट चुनें",
+      "generate": "HMAC जेनरेट करें",
+      "verify": "HMAC सत्यापित करें",
+      "output_title": "HMAC परिणाम",
+      "output_desc": "जेनरेटेड HMAC वैल्यू",
+      "output_placeholder": "जेनरेटेड HMAC यहाँ दिखाई देगा...",
+      "hmac_result": "HMAC वैल्यू",
+      "algorithm_used": "उपयोग किया गया एल्गोरिथम",
+      "output_format": "आउटपुट फॉर्मेट",
+      "hash_length": "हैश लंबाई",
+      "characters": "वर्ण",
+      "missing_input_key": "कृपया संदेश डेटा और सीक्रेट की दर्ज करें",
+      "missing_verification_data": "कृपया पूर्ण सत्यापन डेटा दर्ज करें",
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "HMAC सिद्धांत",
+      "tip1_desc": "HMAC हैश फंक्शन और सीक्रेट की पर आधारित है, संदेश अखंडता और प्रमाणीकरण प्रदान करता है",
+      "tip2_title": "एल्गोरिथम चयन",
+      "tip2_desc": "SHA-256 या उच्चतर शक्ति एल्गोरिथम का उपयोग करने की सिफारिश की जाती है",
+      "tip3_title": "की सुरक्षा",
+      "tip3_desc": "HMAC की सुरक्षा सीक्रेट की की गोपनीयता पर निर्भर करती है",
+      "tip4_title": "एप्लिकेशन सेनारियो",
+      "tip4_desc": "आमतौर पर API हस्ताक्षर, JWT सत्यापन, डेटा अखंडता सत्यापन के लिए उपयोग किया जाता है",
+      "meta": {
+        "title": "HMAC जेनरेटर",
+        "description": "ऑनलाइन HMAC जेनरेशन टूल। डेटा अखंडता और पहचान सत्यापन के लिए संदेश प्रमाणीकरण कोड जेनरेट करने के लिए कई हैश एल्गोरिथम का समर्थन करता है।",
+        "keywords": "HMAC जेनरेटर,संदेश प्रमाणीकरण कोड,हैश एल्गोरिथम,डेटा अखंडता,पहचान सत्यापन,API हस्ताक्षर,ऑनलाइन टूल"
       }
     }
   }
