--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -10,6 +10,7 @@
     "minify": "压缩",
     "convert": "转换",
     "download": "下载",
+    "generate": "生成",
     "input": "输入",
     "output": "输出",
     "upload_file": "上传文件",
@@ -326,6 +327,397 @@
         "title": "URL编码解码工具",
         "description": "在线URL编码解码工具。处理URL参数、特殊字符转义，支持encodeURIComponent格式，适用于前端开发。",
         "keywords": "URL编码,URL解码,encodeURIComponent,decodeURIComponent,URL转义,在线工具"
+      }
+    },
+    "password-generator": {
+      "name": "密码生成器",
+      "description": "生成安全可靠的随机密码",
+      "settings_title": "密码设置",
+      "settings_desc": "自定义密码生成规则",
+      "length": "密码长度",
+      "uppercase": "包含大写字母",
+      "lowercase": "包含小写字母",
+      "numbers": "包含数字",
+      "symbols": "包含符号",
+      "exclude_similar": "排除相似字符 (il1Lo0O)",
+      "exclude_ambiguous": "排除歧义字符 (方括号、圆括号等)",
+      "generate": "生成密码",
+      "result_title": "生成结果",
+      "result_desc": "生成的密码和强度评估",
+      "result_placeholder": "生成的密码将显示在这里...",
+      "strength": "密码强度",
+      "weak": "弱",
+      "medium": "中等",
+      "strong": "强",
+      "no_charset": "请至少选择一种字符类型",
+      "tips_title": "使用建议",
+      "tip1_title": "密码长度",
+      "tip1_desc": "建议使用12位以上的密码，长度越长安全性越高",
+      "tip2_title": "字符组合",
+      "tip2_desc": "建议包含大写字母、小写字母、数字和符号",
+      "tip3_title": "定期更换",
+      "tip3_desc": "定期更换密码，避免在多个账户使用相同密码",
+      "tip4_title": "安全存储",
+      "tip4_desc": "使用密码管理器安全存储密码，避免明文记录",
+      "meta": {
+        "title": "密码生成器",
+        "description": "在线安全密码生成器。支持自定义长度、字符集，生成高强度随机密码，保护账户安全。",
+        "keywords": "密码生成器,随机密码,安全密码,密码强度,账户安全,在线工具"
+      }
+    },
+    "aes-encrypt-decrypt": {
+      "name": "AES加密解密器",
+      "description": "AES对称加密算法加密解密工具",
+      "input_title": "输入数据",
+      "input_desc": "输入要加密/解密的数据",
+      "input_placeholder": "请输入要加密或解密的文本...",
+      "key_label": "密钥 (32字符)",
+      "key_placeholder": "请输入32位密钥或点击生成...",
+      "generate_key": "生成密钥",
+      "iv_label": "初始化向量 (16字符)",
+      "iv_placeholder": "请输入16位IV或点击生成...",
+      "generate_iv": "生成IV",
+      "mode_label": "加密模式",
+      "select_mode": "选择加密模式",
+      "encrypt": "加密",
+      "decrypt": "解密",
+      "output_title": "输出结果",
+      "output_desc": "加密/解密后的数据",
+      "output_placeholder": "加密/解密结果将显示在这里...",
+      "missing_input_key": "请输入数据和密钥",
+      "missing_input_key_iv": "请输入数据、密钥和IV",
+      "decrypt_failed": "解密失败，请检查数据和密钥",
+      "tips_title": "使用说明",
+      "tip1_title": "AES算法",
+      "tip1_desc": "AES（高级加密标准）是目前最安全的对称加密算法之一",
+      "tip2_title": "密钥安全",
+      "tip2_desc": "密钥长度为32字符（256位），请妥善保管密钥",
+      "tip3_title": "初始化向量",
+      "tip3_desc": "IV增加加密的随机性，每次加密应使用不同的IV",
+      "tip4_title": "数据安全",
+      "tip4_desc": "所有加密解密在本地完成，数据不会上传到服务器",
+      "meta": {
+        "title": "AES加密解密工具",
+        "description": "在线AES加密解密工具。支持AES-256-CBC模式，提供安全的数据加密解密功能。",
+        "keywords": "AES加密,AES解密,对称加密,数据加密,信息安全,在线工具"
+      }
+    },
+    "jwt-decoder": {
+      "name": "JWT解码器",
+      "description": "JWT令牌解码和验证工具",
+      "input_title": "JWT令牌输入",
+      "input_desc": "输入要解码的JWT令牌",
+      "input_placeholder": "请输入JWT令牌...",
+      "output_title": "解码结果",
+      "output_desc": "JWT令牌的详细信息",
+      "header": "Header (头部)",
+      "payload": "Payload (载荷)",
+      "signature": "Signature (签名)",
+      "issuer": "发行者 (iss)",
+      "subject": "主题 (sub)",
+      "audience": "受众 (aud)",
+      "issued_at": "签发时间 (iat)",
+      "expires_at": "过期时间 (exp)",
+      "expired": "已过期",
+      "valid_jwt": "有效的JWT令牌",
+      "invalid_format": "JWT格式无效，应包含三个部分",
+      "decode_failed": "解码失败，请检查JWT令牌格式",
+      "no_output": "请输入JWT令牌进行解码",
+      "tips_title": "使用说明",
+      "tip1_title": "JWT结构",
+      "tip1_desc": "JWT由Header、Payload、Signature三部分组成，用.分隔",
+      "tip2_title": "Base64URL编码",
+      "tip2_desc": "Header和Payload使用Base64URL编码，可以直接解码查看",
+      "tip3_title": "签名验证",
+      "tip3_desc": "本工具只解码显示内容，不验证签名有效性",
+      "tip4_title": "过期检查",
+      "tip4_desc": "自动检查exp字段判断令牌是否过期",
+      "meta": {
+        "title": "JWT解码器",
+        "description": "在线JWT令牌解码工具。解码JWT Header、Payload，显示详细信息和过期状态。",
+        "keywords": "JWT解码,JWT令牌,身份验证,Token解析,JSON Web Token,在线工具"
+      }
+    },
+    "rsa-encrypt-decrypt": {
+      "name": "RSA加密解密器",
+      "description": "RSA非对称加密算法工具",
+      "encrypt_tab": "加密解密",
+      "keygen_tab": "密钥生成",
+      "input_title": "输入数据",
+      "input_desc": "输入要加密/解密的数据",
+      "input_placeholder": "请输入要加密或解密的文本...",
+      "public_key": "公钥",
+      "public_key_label": "公钥 (用于加密)",
+      "public_key_placeholder": "请输入或生成RSA公钥...",
+      "private_key": "私钥",
+      "private_key_label": "私钥 (用于解密)",
+      "private_key_placeholder": "请输入或生成RSA私钥...",
+      "encrypt": "RSA加密",
+      "decrypt": "RSA解密",
+      "output_title": "输出结果",
+      "output_desc": "加密/解密后的数据",
+      "output_placeholder": "加密/解密结果将显示在这里...",
+      "keygen_title": "密钥对生成",
+      "keygen_desc": "生成RSA公私钥对",
+      "generate_keys": "生成密钥对",
+      "key_size_label": "密钥长度",
+      "select_key_size": "选择密钥长度",
+      "generate_keypair": "生成密钥对",
+      "generating": "生成中...",
+      "generated_public_key": "生成的公钥",
+      "generated_private_key": "生成的私钥",
+      "missing_input_key": "请输入数据和公钥",
+      "missing_input_public_key": "请输入数据和公钥",
+      "missing_input_private_key": "请输入数据和私钥",
+      "encrypt_failed": "加密失败，请检查数据和公钥",
+      "decrypt_failed": "解密失败，请检查数据和私钥",
+      "placeholder": "请输入要加密或解密的文本...",
+      "tips_title": "使用说明",
+      "tip1_title": "RSA算法",
+      "tip1_desc": "RSA是安全的非对称加密算法，公钥加密，私钥解密",
+      "tip2_title": "密钥长度",
+      "tip2_desc": "推荐使用2048位以上的密钥长度，更高安全性",
+      "tip3_title": "数据限制",
+      "tip3_desc": "RSA加密有数据长度限制，大数据建议使用AES+RSA组合",
+      "tip4_title": "密钥管理",
+      "tip4_desc": "私钥需要严格保密，公钥可以公开分享",
+      "meta": {
+        "title": "RSA加密解密工具",
+        "description": "在线RSA加密解密工具。支持密钥对生成，公钥加密私钥解密，保障数据传输安全。",
+        "keywords": "RSA加密,RSA解密,非对称加密,公钥加密,私钥解密,数字签名,在线工具"
+      }
+    },
+    "md5-hash": {
+      "name": "MD5哈希生成器",
+      "description": "生成MD5哈希值的工具",
+      "placeholder": "请输入要计算MD5的文本...",
+      "generate": "生成MD5",
+      "input_title": "输入文本",
+      "output_title": "MD5哈希值",
+      "output_desc": "生成的MD5哈希值",
+      "output_placeholder": "MD5哈希值将显示在这里...",
+      "meta": {
+        "title": "MD5哈希生成器",
+        "description": "在线MD5哈希生成工具。快速计算文本的MD5哈希值，适用于数据校验和唯一标识。",
+        "keywords": "MD5哈希,哈希生成器,数据校验,MD5计算,在线工具"
+      }
+    },
+    "sha256-hash": {
+      "name": "SHA256哈希生成器",
+      "description": "生成SHA256哈希值的工具",
+      "placeholder": "请输入要计算SHA256的文本...",
+      "generate": "生成SHA256",
+      "input_title": "输入文本",
+      "output_title": "SHA256哈希值",
+      "output_desc": "生成的SHA256哈希值",
+      "output_placeholder": "SHA256哈希值将显示在这里...",
+      "meta": {
+        "title": "SHA256哈希生成器",
+        "description": "在线SHA256哈希生成工具。生成安全的SHA256哈希值，广泛用于密码存储和数据完整性验证。",
+        "keywords": "SHA256哈希,哈希生成器,密码安全,数据完整性,SHA256计算,在线工具"
+      }
+    },
+    "sha1-hash": {
+      "name": "SHA1哈希生成器",
+      "description": "生成SHA1哈希值的工具",
+      "placeholder": "请输入要计算SHA1的文本...",
+      "generate": "生成SHA1",
+      "input_title": "输入文本",
+      "output_title": "SHA1哈希值",
+      "output_desc": "生成的SHA1哈希值",
+      "output_placeholder": "SHA1哈希值将显示在这里...",
+      "meta": {
+        "title": "SHA1哈希生成器",
+        "description": "在线SHA1哈希生成工具。计算文本的SHA1哈希值，用于数据校验和版本控制系统。",
+        "keywords": "SHA1哈希,哈希生成器,数据校验,SHA1计算,版本控制,在线工具"
+      }
+    },
+    "hex-encoder-decoder": {
+      "name": "Hex编码解码器",
+      "description": "十六进制字符串编码解码工具",
+      "placeholder": "请输入要编码/解码的文本或十六进制...",
+      "encode": "编码为Hex",
+      "decode": "从Hex解码",
+      "input_title": "输入文本",
+      "output_title": "输出结果",
+      "output_desc": "编码/解码后的结果",
+      "output_placeholder": "编码/解码结果将显示在这里...",
+      "invalid_hex": "无效的十六进制格式",
+      "encoded": "编码完成",
+      "decoded": "解码完成",
+      "meta": {
+        "title": "Hex编码解码器",
+        "description": "在线十六进制编码解码工具。支持文本与十六进制字符串互转，适用于数据处理和调试。",
+        "keywords": "Hex编码,十六进制解码,编码工具,解码工具,数据转换,在线工具"
+      }
+    },
+    "binary-encoder-decoder": {
+      "name": "Binary编码解码器",
+      "description": "二进制字符串编码解码工具",
+      "placeholder": "请输入要编码/解码的文本或二进制...",
+      "encode": "编码为Binary",
+      "decode": "从Binary解码",
+      "input_title": "输入文本",
+      "output_title": "输出结果",
+      "output_desc": "编码/解码后的结果",
+      "output_placeholder": "编码/解码结果将显示在这里...",
+      "invalid_binary": "无效的二进制格式",
+      "encoded": "编码完成",
+      "decoded": "解码完成",
+      "meta": {
+        "title": "Binary编码解码器",
+        "description": "在线二进制编码解码工具。支持文本与二进制字符串互转，适用于底层数据分析和学习。",
+        "keywords": "Binary编码,二进制解码,编码工具,解码工具,二进制转换,在线工具"
+      }
+    },
+    "password-generator": {
+      "name": "密码生成器",
+      "description": "生成安全可靠的随机密码",
+      "settings_title": "密码设置",
+      "settings_desc": "自定义密码生成规则",
+      "length": "密码长度",
+      "uppercase": "包含大写字母",
+      "lowercase": "包含小写字母",
+      "numbers": "包含数字",
+      "symbols": "包含符号",
+      "exclude_similar": "排除相似字符 (il1Lo0O)",
+      "exclude_ambiguous": "排除歧义字符 (方括号、圆括号等)",
+      "generate": "生成密码",
+      "result_title": "生成结果",
+      "result_desc": "生成的密码和强度评估",
+      "result_placeholder": "生成的密码将显示在这里...",
+      "strength": "密码强度",
+      "weak": "弱",
+      "medium": "中等",
+      "strong": "强",
+      "no_charset": "请至少选择一种字符类型",
+      "tips_title": "使用建议",
+      "tip1_title": "密码长度",
+      "tip1_desc": "建议使用12位以上的密码，长度越长安全性越高",
+      "tip2_title": "字符组合",
+      "tip2_desc": "建议包含大写字母、小写字母、数字和符号",
+      "tip3_title": "定期更换",
+      "tip3_desc": "定期更换密码，避免在多个账户使用相同密码",
+      "tip4_title": "安全存储",
+      "tip4_desc": "使用密码管理器安全存储密码，避免明文记录",
+      "meta": {
+        "title": "密码生成器",
+        "description": "在线安全密码生成器。支持自定义长度、字符集，生成高强度随机密码，保护账户安全。",
+        "keywords": "密码生成器,随机密码,安全密码,密码强度,账户安全,在线工具"
+      }
+    },
+    "aes-encrypt-decrypt": {
+      "name": "AES加密解密器",
+      "description": "AES对称加密算法加密解密工具",
+      "input_title": "输入数据",
+      "input_desc": "输入要加密/解密的数据",
+      "input_placeholder": "请输入要加密或解密的文本...",
+      "key_label": "密钥 (32字符)",
+      "key_placeholder": "请输入32位密钥或点击生成...",
+      "generate_key": "生成密钥",
+      "iv_label": "初始化向量 (16字符)",
+      "iv_placeholder": "请输入16位IV或点击生成...",
+      "generate_iv": "生成IV",
+      "mode_label": "加密模式",
+      "select_mode": "选择加密模式",
+      "encrypt": "加密",
+      "decrypt": "解密",
+      "output_title": "输出结果",
+      "output_desc": "加密/解密后的数据",
+      "output_placeholder": "加密/解密结果将显示在这里...",
+      "missing_input_key": "请输入数据和密钥",
+      "missing_input_key_iv": "请输入数据、密钥和IV",
+      "decrypt_failed": "解密失败，请检查数据和密钥",
+      "tips_title": "使用说明",
+      "tip1_title": "AES算法",
+      "tip1_desc": "AES（高级加密标准）是目前最安全的对称加密算法之一",
+      "tip2_title": "密钥安全",
+      "tip2_desc": "密钥长度为32字符（256位），请妥善保管密钥",
+      "tip3_title": "初始化向量",
+      "tip3_desc": "IV增加加密的随机性，每次加密应使用不同的IV",
+      "tip4_title": "数据安全",
+      "tip4_desc": "所有加密解密在本地完成，数据不会上传到服务器",
+      "meta": {
+        "title": "AES加密解密工具",
+        "description": "在线AES加密解密工具。支持AES-256-CBC模式，提供安全的数据加密解密功能。",
+        "keywords": "AES加密,AES解密,对称加密,数据加密,信息安全,在线工具"
+      }
+    },
+    "jwt-decoder": {
+      "name": "JWT解码器",
+      "description": "JWT令牌解码和验证工具",
+      "input_title": "JWT令牌输入",
+      "input_desc": "输入要解码的JWT令牌",
+      "input_placeholder": "请输入JWT令牌...",
+      "output_title": "解码结果",
+      "output_desc": "JWT令牌的详细信息",
+      "header": "Header (头部)",
+      "payload": "Payload (载荷)",
+      "signature": "Signature (签名)",
+      "issuer": "发行者 (iss)",
+      "subject": "主题 (sub)",
+      "audience": "受众 (aud)",
+      "issued_at": "签发时间 (iat)",
+      "expires_at": "过期时间 (exp)",
+      "expired": "已过期",
+      "valid_jwt": "有效的JWT令牌",
+      "invalid_format": "JWT格式无效，应包含三个部分",
+      "decode_failed": "解码失败，请检查JWT令牌格式",
+      "no_output": "请输入JWT令牌进行解码",
+      "tips_title": "使用说明",
+      "tip1_title": "JWT结构",
+      "tip1_desc": "JWT由Header、Payload、Signature三部分组成，用.分隔",
+      "tip2_title": "Base64URL编码",
+      "tip2_desc": "Header和Payload使用Base64URL编码，可以直接解码查看",
+      "tip3_title": "签名验证",
+      "tip3_desc": "本工具只解码显示内容，不验证签名有效性",
+      "tip4_title": "过期检查",
+      "tip4_desc": "自动检查exp字段判断令牌是否过期",
+      "meta": {
+        "title": "JWT解码器",
+        "description": "在线JWT令牌解码工具。解码JWT Header、Payload，显示详细信息和过期状态。",
+        "keywords": "JWT解码,JWT令牌,身份验证,Token解析,JSON Web Token,在线工具"
+      }
+    },
+    "hmac-generator": {
+      "name": "HMAC生成器",
+      "description": "HMAC消息认证码生成工具",
+      "input_title": "输入配置",
+      "input_desc": "配置HMAC生成参数",
+      "data_label": "消息数据",
+      "data_placeholder": "请输入要生成HMAC的消息数据...",
+      "key_label": "密钥",
+      "key_placeholder": "请输入HMAC密钥...",
+      "generate_key": "生成随机密钥",
+      "algorithm_label": "算法",
+      "select_algorithm": "选择HMAC算法",
+      "format_label": "输出格式",
+      "select_format": "选择输出格式",
+      "generate": "生成HMAC",
+      "verify": "验证HMAC",
+      "output_title": "HMAC结果",
+      "output_desc": "生成的HMAC值",
+      "output_placeholder": "生成的HMAC将显示在这里...",
+      "hmac_result": "HMAC值",
+      "algorithm_used": "使用算法",
+      "output_format": "输出格式",
+      "hash_length": "哈希长度",
+      "characters": "字符",
+      "missing_input_key": "请输入消息数据和密钥",
+      "missing_verification_data": "请输入完整的验证数据",
+      "tips_title": "使用说明",
+      "tip1_title": "HMAC原理",
+      "tip1_desc": "HMAC基于哈希函数和密钥，提供消息完整性和身份验证",
+      "tip2_title": "算法选择",
+      "tip2_desc": "推荐使用SHA-256或更高强度的算法",
+      "tip3_title": "密钥安全",
+      "tip3_desc": "HMAC的安全性依赖于密钥的保密性",
+      "tip4_title": "应用场景",
+      "tip4_desc": "常用于API签名、JWT验证、数据完整性校验",
+      "meta": {
+        "title": "HMAC生成器",
+        "description": "在线HMAC生成工具。支持多种哈希算法，生成消息认证码，确保数据完整性和身份验证。",
+        "keywords": "HMAC生成器,消息认证码,哈希算法,数据完整性,身份验证,API签名,在线工具"
       }
     }
   }
