feat: 增加二维码生成和svg占位图生成器功能

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -534,6 +534,99 @@
         "keywords": "Binary encoding,binary decoding,encoder,decoder,binary conversion,online tool"
       }
     },
+    "qr-code-generator": {
+      "name": "QR Code Generator",
+      "description": "Generate custom QR code images",
+      "placeholder": "Enter content to generate QR code...",
+      "input_title": "Input Content",
+      "input_desc": "Enter text, URL or other content",
+      "output_title": "Generated QR Code",
+      "output_desc": "Generated QR code image",
+      "size_label": "Size",
+      "select_size": "Select QR code size",
+      "error_correction_label": "Error Correction",
+      "select_error_correction": "Select error correction level",
+      "foreground_color": "Foreground Color",
+      "background_color": "Background Color",
+      "format_label": "Export Format",
+      "select_format": "Select export format",
+      "generate_button": "Generate QR Code",
+      "download_png": "Download PNG",
+      "download_svg": "Download SVG",
+      "copy_image": "Copy Image",
+      "qr_copied": "QR code copied to clipboard",
+      "qr_downloaded": "QR code file downloaded",
+      "empty_content": "Please enter content",
+      "generate_failed": "Failed to generate QR code",
+      "sizes": {
+        "small": "Small (128x128)",
+        "medium": "Medium (256x256)",
+        "large": "Large (512x512)",
+        "xlarge": "X-Large (1024x1024)"
+      },
+      "error_levels": {
+        "L": "Low (7%)",
+        "M": "Medium (15%)",
+        "Q": "Quartile (25%)",
+        "H": "High (30%)"
+      },
+      "tips_title": "Usage Instructions",
+      "tip1_title": "Content Types",
+      "tip1_desc": "Supports text, URL, phone, email, WiFi configuration and other content types",
+      "tip2_title": "Size Selection",
+      "tip2_desc": "Choose appropriate size based on usage scenario, large size recommended for printing",
+      "tip3_title": "Error Correction",
+      "tip3_desc": "Higher error correction level makes QR code more complex but more fault-tolerant",
+      "tip4_title": "Color Settings",
+      "tip4_desc": "Maintain sufficient contrast between foreground and background colors for scanning",
+      "meta": {
+        "title": "QR Code Generator",
+        "description": "Online QR code generation tool. Support custom size, color and error correction level to generate high-quality PNG/SVG format QR codes.",
+        "keywords": "QR code generator,QR code maker,URL to QR code,barcode generator,online tool"
+      }
+    },
+    "svg-placeholder-generator": {
+      "name": "SVG Placeholder Generator",
+      "description": "Generate custom SVG placeholder images",
+      "width_label": "Width",
+      "height_label": "Height",
+      "text_label": "Placeholder Text",
+      "text_placeholder": "Enter placeholder text...",
+      "background_color": "Background Color",
+      "text_color": "Text Color",
+      "font_size_label": "Font Size",
+      "template_label": "Template Style",
+      "select_template": "Select template style",
+      "generate_button": "Generate Placeholder",
+      "copy_svg": "Copy SVG Code",
+      "download_svg": "Download SVG File",
+      "svg_copied": "SVG code copied to clipboard",
+      "svg_downloaded": "SVG file downloaded",
+      "preview_title": "Preview",
+      "svg_code_title": "SVG Code",
+      "templates": {
+        "simple": "Simple Style",
+        "gradient": "Gradient Background",
+        "grid": "Grid Background",
+        "dots": "Dots Background",
+        "lines": "Lines Background"
+      },
+      "default_text": "{width} × {height}",
+      "tips_title": "Usage Instructions",
+      "tip1_title": "Size Settings",
+      "tip1_desc": "Set the width and height of placeholder image in pixels",
+      "tip2_title": "Text Content",
+      "tip2_desc": "Customize placeholder text, supports dynamic display of size variables like width and height",
+      "tip3_title": "Template Selection",
+      "tip3_desc": "Multiple template styles available for different design needs",
+      "tip4_title": "Export Usage",
+      "tip4_desc": "Generated SVG can be used directly in web development or design files",
+      "meta": {
+        "title": "SVG Placeholder Generator",
+        "description": "Online SVG placeholder image generation tool. Support custom dimensions, text, colors and template styles for quick placeholder creation.",
+        "keywords": "SVG placeholder,placeholder generator,placeholder image,image placeholder,online tool"
+      }
+    },
     "hmac-generator": {
       "name": "HMAC Generator",
       "description": "HMAC message authentication code generation tool",
