--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -534,6 +534,99 @@
         "keywords": "Binary एनकोडिंग,बाइनरी डीकोडिंग,एनकोडर,डीकोडर,बाइनरी कनवर्शन,ऑनलाइन टूल"
       }
     },
+    "qr-code-generator": {
+      "name": "QR कोड जेनरेटर",
+      "description": "कस्टम QR कोड इमेज जेनरेट करें",
+      "placeholder": "QR कोड जेनरेट करने के लिए कंटेंट दर्ज करें...",
+      "input_title": "इनपुट कंटेंट",
+      "input_desc": "टेक्स्ट, URL या अन्य कंटेंट दर्ज करें",
+      "output_title": "जेनरेटेड QR कोड",
+      "output_desc": "जेनरेटेड QR कोड इमेज",
+      "size_label": "साइज़",
+      "select_size": "QR कोड साइज़ चुनें",
+      "error_correction_label": "एरर करेक्शन",
+      "select_error_correction": "एरर करेक्शन लेवल चुनें",
+      "foreground_color": "फोरग्राउंड कलर",
+      "background_color": "बैकग्राउंड कलर",
+      "format_label": "एक्सपोर्ट फॉर्मेट",
+      "select_format": "एक्सपोर्ट फॉर्मेट चुनें",
+      "generate_button": "QR कोड जेनरेट करें",
+      "download_png": "PNG डाउनलोड करें",
+      "download_svg": "SVG डाउनलोड करें",
+      "copy_image": "इमेज कॉपी करें",
+      "qr_copied": "QR कोड क्लिपबोर्ड में कॉपी हो गया",
+      "qr_downloaded": "QR कोड फ़ाइल डाउनलोड हो गई",
+      "empty_content": "कृपया कंटेंट दर्ज करें",
+      "generate_failed": "QR कोड जेनरेट करना विफल",
+      "sizes": {
+        "small": "छोटा (128x128)",
+        "medium": "मध्यम (256x256)",
+        "large": "बड़ा (512x512)",
+        "xlarge": "अतिरिक्त बड़ा (1024x1024)"
+      },
+      "error_levels": {
+        "L": "कम (7%)",
+        "M": "मध्यम (15%)",
+        "Q": "अधिक (25%)",
+        "H": "उच्च (30%)"
+      },
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "कंटेंट प्रकार",
+      "tip1_desc": "टेक्स्ट, URL, फोन, ईमेल, WiFi कॉन्फ़िगरेशन और अन्य कंटेंट प्रकारों का समर्थन करता है",
+      "tip2_title": "साइज़ चुनाव",
+      "tip2_desc": "उपयोग के परिदृश्य के आधार पर उपयुक्त साइज़ चुनें, प्रिंटिंग के लिए बड़ा साइज़ अनुशंसित",
+      "tip3_title": "एरर करेक्शन",
+      "tip3_desc": "उच्च एरर करेक्शन लेवल QR कोड को अधिक जटिल बनाता है लेकिन अधिक फॉल्ट-टॉलरेंट भी",
+      "tip4_title": "कलर सेटिंग्स",
+      "tip4_desc": "स्कैनिंग के लिए फोरग्राउंड और बैकग्राउंड कलर के बीच पर्याप्त कंट्रास्ट बनाए रखें",
+      "meta": {
+        "title": "QR कोड जेनरेटर",
+        "description": "ऑनलाइन QR कोड जेनरेशन टूल। उच्च गुणवत्ता PNG/SVG फॉर्मेट QR कोड जेनरेट करने के लिए कस्टम साइज़, कलर और एरर करेक्शन लेवल का समर्थन करता है।",
+        "keywords": "QR कोड जेनरेटर,QR कोड निर्माता,URL से QR कोड,बारकोड जेनरेटर,ऑनलाइन टूल"
+      }
+    },
+    "svg-placeholder-generator": {
+      "name": "SVG प्लेसहोल्डर जेनरेटर",
+      "description": "कस्टम SVG प्लेसहोल्डर इमेज जेनरेट करें",
+      "width_label": "चौड़ाई",
+      "height_label": "ऊंचाई",
+      "text_label": "प्लेसहोल्डर टेक्स्ट",
+      "text_placeholder": "प्लेसहोल्डर टेक्स्ट दर्ज करें...",
+      "background_color": "बैकग्राउंड कलर",
+      "text_color": "टेक्स्ट कलर",
+      "font_size_label": "फॉन्ट साइज़",
+      "template_label": "टेम्प्लेट स्टाइल",
+      "select_template": "टेम्प्लेट स्टाइल चुनें",
+      "generate_button": "प्लेसहोल्डर जेनरेट करें",
+      "copy_svg": "SVG कोड कॉपी करें",
+      "download_svg": "SVG फ़ाइल डाउनलोड करें",
+      "svg_copied": "SVG कोड क्लिपबोर्ड में कॉपी हो गया",
+      "svg_downloaded": "SVG फ़ाइल डाउनलोड हो गई",
+      "preview_title": "पूर्वावलोकन",
+      "svg_code_title": "SVG कोड",
+      "templates": {
+        "simple": "सरल स्टाइल",
+        "gradient": "ग्रेडिएंट बैकग्राउंड",
+        "grid": "ग्रिड बैकग्राउंड",
+        "dots": "डॉट्स बैकग्राउंड",
+        "lines": "लाइन्स बैकग्राउंड"
+      },
+      "default_text": "{width} × {height}",
+      "tips_title": "उपयोग निर्देश",
+      "tip1_title": "साइज़ सेटिंग्स",
+      "tip1_desc": "प्लेसहोल्डर इमेज की चौड़ाई और ऊंचाई पिक्सेल में सेट करें",
+      "tip2_title": "टेक्स्ट कंटेंट",
+      "tip2_desc": "प्लेसहोल्डर टेक्स्ट को कस्टमाइज़ करें, साइज़ वेरिएबल {width} और {height} का समर्थन करता है",
+      "tip3_title": "टेम्प्लेट चुनाव",
+      "tip3_desc": "विभिन्न डिज़ाइन आवश्यकताओं के लिए कई टेम्प्लेट स्टाइल उपलब्ध",
+      "tip4_title": "एक्सपोर्ट उपयोग",
+      "tip4_desc": "जेनरेटेड SVG को वेब डेवलपमेंट या डिज़ाइन फ़ाइलों में सीधे उपयोग किया जा सकता है",
+      "meta": {
+        "title": "SVG प्लेसहोल्डर जेनरेटर",
+        "description": "ऑनलाइन SVG प्लेसहोल्डर इमेज जेनरेशन टूल। त्वरित प्लेसहोल्डर निर्माण के लिए कस्टम आयाम, टेक्स्ट, कलर और टेम्प्लेट स्टाइल का समर्थन करता है।",
+        "keywords": "SVG प्लेसहोल्डर,प्लेसहोल्डर जेनरेटर,प्लेसहोल्डर इमेज,इमेज प्लेसहोल्डर,ऑनलाइन टूल"
+      }
+    },
     "hmac-generator": {
       "name": "HMAC जेनरेटर",
       "description": "HMAC संदेश प्रमाणीकरण कोड जेनरेशन टूल",
