--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -534,6 +534,99 @@
         "keywords": "Binary编码,二进制解码,编码工具,解码工具,二进制转换,在线工具"
       }
     },
+    "qr-code-generator": {
+      "name": "二维码生成器",
+      "description": "生成自定义二维码图片",
+      "placeholder": "请输入要生成二维码的内容...",
+      "input_title": "输入内容",
+      "input_desc": "输入文本、URL或其他内容",
+      "output_title": "生成的二维码",
+      "output_desc": "生成的二维码图片",
+      "size_label": "尺寸大小",
+      "select_size": "选择二维码尺寸",
+      "error_correction_label": "纠错级别",
+      "select_error_correction": "选择纠错级别",
+      "foreground_color": "前景色",
+      "background_color": "背景色",
+      "format_label": "导出格式",
+      "select_format": "选择导出格式",
+      "generate_button": "生成二维码",
+      "download_png": "下载PNG",
+      "download_svg": "下载SVG",
+      "copy_image": "复制图片",
+      "qr_copied": "二维码已复制到剪贴板",
+      "qr_downloaded": "二维码文件已下载",
+      "empty_content": "请输入内容",
+      "generate_failed": "生成二维码失败",
+      "sizes": {
+        "small": "小 (128x128)",
+        "medium": "中 (256x256)",
+        "large": "大 (512x512)",
+        "xlarge": "特大 (1024x1024)"
+      },
+      "error_levels": {
+        "L": "低 (7%)",
+        "M": "中 (15%)",
+        "Q": "较高 (25%)",
+        "H": "高 (30%)"
+      },
+      "tips_title": "使用说明",
+      "tip1_title": "内容类型",
+      "tip1_desc": "支持文本、URL、电话、邮箱、WiFi配置等各种内容类型",
+      "tip2_title": "尺寸选择",
+      "tip2_desc": "根据使用场景选择合适的尺寸，打印用途建议选择大尺寸",
+      "tip3_title": "纠错级别",
+      "tip3_desc": "纠错级别越高，二维码越复杂，但容错能力越强",
+      "tip4_title": "颜色设置",
+      "tip4_desc": "保持前景色和背景色有足够对比度，确保扫描识别",
+      "meta": {
+        "title": "二维码生成器",
+        "description": "在线二维码生成工具。支持自定义尺寸、颜色和纠错级别，生成高质量PNG/SVG格式二维码。",
+        "keywords": "二维码生成器,QR码,二维码制作,URL转二维码,在线工具"
+      }
+    },
+    "svg-placeholder-generator": {
+      "name": "SVG占位图生成器",
+      "description": "生成自定义SVG占位图片",
+      "width_label": "宽度",
+      "height_label": "高度",
+      "text_label": "占位文字",
+      "text_placeholder": "输入占位文字...",
+      "background_color": "背景色",
+      "text_color": "文字颜色",
+      "font_size_label": "字体大小",
+      "template_label": "模板样式",
+      "select_template": "选择模板样式",
+      "generate_button": "生成占位图",
+      "copy_svg": "复制SVG代码",
+      "download_svg": "下载SVG文件",
+      "svg_copied": "SVG代码已复制到剪贴板",
+      "svg_downloaded": "SVG文件已下载",
+      "preview_title": "预览效果",
+      "svg_code_title": "SVG代码",
+      "templates": {
+        "simple": "简约风格",
+        "gradient": "渐变背景",
+        "grid": "网格背景",
+        "dots": "点阵背景",
+        "lines": "线条背景"
+      },
+      "default_text": "{width} × {height}",
+      "tips_title": "使用说明",
+      "tip1_title": "尺寸设置",
+      "tip1_desc": "设置占位图的宽度和高度，支持像素单位",
+      "tip2_title": "文字内容",
+      "tip2_desc": "可以自定义占位文字，支持尺寸变量如宽度和高度的动态显示",
+      "tip3_title": "模板选择",
+      "tip3_desc": "提供多种模板样式，满足不同设计需求",
+      "tip4_title": "导出使用",
+      "tip4_desc": "生成的SVG可直接用于网页开发或设计稿中",
+      "meta": {
+        "title": "SVG占位图生成器",
+        "description": "在线SVG占位图片生成工具。支持自定义尺寸、文字、颜色和模板样式，快速生成占位图片。",
+        "keywords": "SVG占位图,占位图片生成器,placeholder,图片占位符,在线工具"
+      }
+    },
     "hmac-generator": {
       "name": "HMAC生成器",
       "description": "HMAC消息认证码生成工具",
