--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -667,6 +667,54 @@
         "description": "ऑनलाइन HMAC जेनरेशन टूल। डेटा अखंडता और पहचान सत्यापन के लिए संदेश प्रमाणीकरण कोड जेनरेट करने के लिए कई हैश एल्गोरिथम का समर्थन करता है।",
         "keywords": "HMAC जेनरेटर,संदेश प्रमाणीकरण कोड,हैश एल्गोरिथम,डेटा अखंडता,पहचान सत्यापन,API हस्ताक्षर,ऑनलाइन टूल"
       }
+    },
+    "ip-lookup": {
+      "name": "IP पता खोज",
+      "description": "IP पते की भौगोलिक स्थिति और नेटवर्क जानकारी खोजें",
+      "input_title": "IP पता इनपुट",
+      "output_title": "खोज परिणाम",
+      "placeholder": "IP पता दर्ज करें (जैसे 8.8.8.8)",
+      "output_placeholder": "खोज परिणाम यहाँ दिखाई देंगे...",
+      "current_ip": "आपका IP पता",
+      "query_button": "खोजें",
+      "auto_detect": "स्वचालित खोज",
+      "invalid_ip": "अवैध IP पता प्रारूप",
+      "query_failed": "खोज असफल, कृपया बाद में पुनः प्रयास करें",
+      "querying": "खोजी जा रही है...",
+      "rate_limited": "बहुत अधिक प्रश्न, कृपया बाद में पुनः प्रयास करें",
+      "network_error": "नेटवर्क कनेक्शन त्रुटि",
+      "info": {
+        "basic": "मूलभूत जानकारी",
+        "location": "भौगोलिक स्थिति", 
+        "network": "नेटवर्क जानकारी",
+        "security": "सुरक्षा जानकारी",
+        "ip_address": "IP पता",
+        "country": "देश",
+        "region": "क्षेत्र",
+        "city": "शहर", 
+        "postal_code": "पिन कोड",
+        "latitude": "अक्षांश",
+        "longitude": "देशांतर",
+        "timezone": "समय क्षेत्र",
+        "isp": "इंटरनेट सेवा प्रदाता",
+        "organization": "संगठन",
+        "as_number": "AS नंबर",
+        "proxy": "प्रॉक्सी सर्वर",
+        "mobile": "मोबाइल नेटवर्क",
+        "yes": "हाँ",
+        "no": "नहीं"
+      },
+      "actions": {
+        "copy_ip": "IP पता कॉपी करें",
+        "copy_all": "सभी जानकारी कॉपी करें",
+        "export_json": "JSON एक्सपोर्ट करें",
+        "clear_results": "परिणाम साफ़ करें"
+      },
+      "meta": {
+        "title": "IP पता खोज टूल",
+        "description": "ऑनलाइन IP पता खोज टूल। IP पते की भौगोलिक स्थिति, ISP जानकारी, समय क्षेत्र और अन्य विस्तृत जानकारी प्राप्त करें।",
+        "keywords": "IP खोज,IP पता,भौगोलिक स्थिति,नेटवर्क जानकारी,ISP क्वेरी,ऑनलाइन टूल"
+      }
     }
   }
 }
