--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -77,6 +77,17 @@
     "image": "छवि उपकरण",
     "image_desc": "छवि प्रोसेसिंग और रूपांतरण उपकरण"
   },
+  "changelog": {
+    "title": "चेंजलॉग",
+    "description": "प्रोजेक्ट का विकास इतिहास और फीचर अपडेट देखें",
+    "lastUpdated": "अंतिम अपडेट",
+    "footer": "निरंतर अपडेट हो रहा है, और भी फीचर्स के लिए इंतज़ार करें...",
+    "meta": {
+      "title": "चेंजलॉग - आईटी टूल्स कलेक्शन",
+      "description": "आईटी टूल्स कलेक्शन प्रोजेक्ट का पूरा विकास इतिहास और फीचर अपडेट रिकॉर्ड",
+      "keywords": "चेंजलॉग,संस्करण इतिहास,विकास इतिहास,फीचर अपडेट,प्रोजेक्ट परिवर्तन"
+    }
+  },
   "tools": {
     "json-formatter": {
       "name": "JSON फॉर्मेटर",
